--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,47 +654,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import all the thngs\n",
     "from cryptography.fernet import Fernet\n",
-    "import pickle\n",
     "import getpass\n",
-    "\n",
-    "W3W_lat, W3W_long = '-38.619797', '146.124734'\n",
-    "stuff_in = {'W3W_lat':W3W_lat,'W3W_long':W3W_long}"
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "········\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "generate_key() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-13a4e82d9fa2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpsssword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetpass\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetpass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFernet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_key\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpsssword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mcipher_suite\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFernet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcipher_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcipher_suite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mW3W_lat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcipher_text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: generate_key() takes 1 positional argument but 2 were given"
+      "Key:········\n",
+      "<class 'str'>\n",
+      "Value:········\n"
      ]
     }
    ],
    "source": [
+    "# get/encrypt/convert key/value\n",
     "key = Fernet.generate_key()\n",
-    "cipher_suite = Fernet(key)\n",
-    "cipher_text = cipher_suite.encrypt(W3W_lat.encode())\n",
-    "cipher_text"
+    "FernetKey = (Fernet(key).encrypt((getpass.getpass(\"Key:\")).encode())).decode('utf-8')\n",
+    "FernetValue = (Fernet(key).encrypt((getpass.getpass(\"Value:\")).encode())).decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write encrypted data to file\n",
+    "datain = {FernetKey:FernetValue}\n",
+    "with open('workfile.json', 'w') as file:\n",
+    "    json.dump(datain, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gAAAAABcnfyNDpsn2Q34hh6zXsdifpmglRq64jwQwC-Ugs7ijdc6-CqKGBygvWu-46IP-nzgyUDwkZ9aHGlZdRcUL_C740vBxw==': 'gAAAAABcnfyPCLJuk2jDHc1REa8LV8gDjCfMTWtr9qqmKmueqYxHLHNuOT9KUG1xZmrPqe-GnaGzg5iLt6nTKKB2tcxlSWe3-A=='}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read encrypted data from file\n",
+    "with open('workfile.json', 'r') as file:\n",
+    "    dataout = json.load(file)\n",
+    "    \n",
+    "for key in dataout:\n",
+    "    print(dataout)"
    ]
   },
   {
@@ -703,139 +726,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'-38.619797'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plain_text = cipher_suite.decrypt(cipher_text)\n",
-    "stuff_out = plain_text.decode()\n",
-    "stuff_out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def write_to_file(key,value,file):\n",
-    "with open('workfile.pickle','wb') as file:\n",
-    "    pickle.dump(stuff_in, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def read_from_file(file):\n",
-    "with open('workfile.pickle','rb') as file:\n",
-    "    stuff_out = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'-38.619797'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stuff_out['W3W_lat']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('workfile.txt') as file:\n",
-    "    text_from_file = file.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'W3W_lat': '-38.619797', 'W3W_long': '146.124734', 'W3W_API_KEY': 'balloon'}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stuff['W3W_API_KEY'] = 'balloon'\n",
-    "stuff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "json.dumps(stuff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('workfile.txt', 'a') as file:\n",
-    "    json.dump(stuff,file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"W3W_lat\": \"-38.619797\", \"W3W_long\": \"146.124734\"}{\"W3W_lat\": \"-38.619797\", \"W3W_long\": \"146.124734\"}{\"W3W_lat\": \"-38.619797\", \"W3W_long\": \"146.124734\"}\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('workfile.txt') as file:\n",
-    "    print(file.read())"
-   ]
   }
  ],
  "metadata": {
