--- a/PyTricks.ipynb
+++ b/PyTricks.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -141,18 +141,8 @@
      "text": [
       "red\n",
       "3812.4\n",
-      "Car(color='red', mileage=3812.4)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "can't set attribute",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-d16c7e1a1b8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Like tuples, namedtuples are immutable:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mmy_car\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'blue'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute"
+      "Car(color='red', mileage=3812.4)\n",
+      "nope!\n"
      ]
     }
    ],
@@ -172,8 +162,91 @@
     "print(my_car)\n",
     "\n",
     "# Like tuples, namedtuples are immutable:\n",
-    "my_car.color = 'blue'"
+    "try:\n",
+    "    my_car.color = 'blue'\n",
+    "except:\n",
+    "    print(\"nope!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 23, 'b': 42, 'c': 12648430}\n",
+      "{\n",
+      "    \"a\": 23,\n",
+      "    \"b\": 42,\n",
+      "    \"c\": 12648430\n",
+      "}\n",
+      "nope!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the standard string repr for dicts is hard to read:\n",
+    "my_mapping = {'a': 23, 'b': 42, 'c': 0xc0ffee}\n",
+    "print(my_mapping)\n",
+    "\n",
+    "# the json module can do a much better job:\n",
+    "import json\n",
+    "print(json.dumps(my_mapping, indent=4, sort_keys=True))\n",
+    "\n",
+    "# note this only works with dicts containing\n",
+    "# primitive types (check out the \"pprint\" module):\n",
+    "try:\n",
+    "    json.dumps({all:'yep'})\n",
+    "except:\n",
+    "    print(\"nope!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -192,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
